force-app/main/default/objects/conference360__Email_Template__c/conference360__Email_Template__c.object-meta.xml
<CustomObject>
    <label>Email Template</label>
    <nameField>
        <label>Email Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>