force-app/main/default/objects/conference360__Email_Template__c/fields/conference360__JSON_File_1__c.field-meta.xml
<CustomField>
    <fullName>conference360__JSON_File_1__c</fullName>
    <label>JSON File 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>