force-app/main/default/objects/conference360__Email_Template__c/fields/conference360__SF_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>conference360__SF_Template_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>SF Template Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>