force-app/main/default/objects/conference360__Email_Template__c/listViews/conference360__All.listView-meta.xml
<ListView>
    <fullName>conference360__All</fullName>
    <columns>NAME</columns>
    <columns>conference360__JSON_File_1__c</columns>
    <columns>conference360__JSON_File_2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>